--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="textDarkGreyColor">#3E3E3E</color>
+    <color name="btnBorderColor">#818181</color>
+    <color name="waterDarkBlue">#00486B</color>
+    <color name="cardBorder">#A7A7A7</color>
+    <color name="cardContent">#292929</color>
+    <color name="waterMediumBlue">#058DD0</color>
 </resources>
