--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary_color">#EEEEEE</color>
+    <color name="login_primary_color">#EEEEEE</color>
     <color name="green">#486D86</color>
+    <color name="grey">#808080</color>
 </resources>
