--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,8 @@
         <item name="android:textColorHint">@android:color/secondary_text_light</item>
         <item name="android:textStyle">normal</item>
     </style>
+
+    <style name="headerForTesting">
+        <item name="android:textSize">24sp</item>
+    </style>
 </resources>
