--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,15 @@
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        tools:context=".MainActivity"
-        android:fitsSystemWindows="true"
-        android:id="@+id/drawer_layout"
-        >
-
-<!--    NOTES IF DW TO SEE THE SIDE DRAWER REMOVE THE tools:openDrawer="start" -->
+    <!--    NOTES IF DW TO SEE THE SIDE DRAWER REMOVE THE tools:openDrawer="start" -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/toolbarHeader"
-            layout="@layout/header"
-            />
+            layout="@layout/header" />
+
         <fragment
             android:id="@+id/fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -46,17 +37,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/main_menu"/>
+            app:menu="@menu/main_menu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        app:headerLayout="@layout/main_menu_header"
-        app:menu="@menu/main_menu"
         android:layout_gravity="start"
-        />
+        app:headerLayout="@layout/main_menu_header"
+        app:menu="@menu/main_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
