--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,5 +47,8 @@
         <item name="android:background">@drawable/background_text_field_login</item>
     </style>
 
-
+    <style name="CircularProgressBar">
+        <item name="android:indeterminateOnly">false </item>
+        <item name="android:progressDrawable">@drawable/watertracker_cpb</item>
+    </style>
 </resources>
