--- a/app/src/main/res/layout/fragment_add_water_pop_up.xml
+++ b/app/src/main/res/layout/fragment_add_water_pop_up.xml
@@ -197,19 +197,17 @@
 
     <Button
         android:id="@+id/addwaterAmount_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="#0076B1"
         android:text="add"
         app:cornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addwater_400" />
+        app:layout_constraintTop_toBottomOf="@+id/addwater_400"
+        style="@style/custom_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
