Sleep Tracker UI Created...... with no function.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="cardBorder">#A7A7A7</color>
     <color name="cardContent">#292929</color>
     <color name="waterMediumBlue">#058DD0</color>
+    <color name="sleepPurple">#5A49A0</color>
 </resources>
