--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,8 +46,13 @@
         <item name="android:background">@drawable/background_text_field_login</item>
     </style>
 
-    <style name="CircularProgressBar">
+    <style name="WaterCircularProgressBar">
         <item name="android:indeterminateOnly">false </item>
         <item name="android:progressDrawable">@drawable/watertracker_cpb</item>
+    </style>
+
+    <style name="SleepCircularProgressBar">
+        <item name="android:indeterminateOnly">false </item>
+        <item name="android:progressDrawable">@drawable/sleeptracker_cpb</item>
     </style>
 </resources>
