--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -55,4 +55,9 @@
         <item name="android:indeterminateOnly">false </item>
         <item name="android:progressDrawable">@drawable/sleeptracker_cpb</item>
     </style>
+
+    <style name="CircleCaloriesBar">
+        <item name="android:indeterminateOnly">false </item>
+        <item name="android:progressDrawable">@drawable/calories_circle</item>
+    </style>
 </resources>
