--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:id="@+id/toolbarHeader"
             layout="@layout/header"
             />
+
         <fragment
             android:id="@+id/fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -28,8 +29,9 @@
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbarHeader"
             app:navGraph="@navigation/bottom_nav" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -40,7 +42,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/main_menu"/>
+            app:layout_constraintTop_toBottomOf="@+id/fragment"
+            app:menu="@menu/main_menu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
