--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,16 @@
     <style name="headerForTesting">
         <item name="android:textSize">24sp</item>
     </style>
+
+    <style name="title_under_progessBar">
+        <item name="android:textColor">@color/waterDarkBlue</item>
+        <item name="android:textSize">36sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="daily_target_style" parent="custom_image_btn">
+        <item name="android:drawableRight">@drawable/edit_pen</item>
+        <item name="android:textColor">#5C5C5C</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
