--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Mobile_assignment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Mobile_assignment" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -50,5 +50,31 @@
     <style name="CircularProgressBar">
         <item name="android:indeterminateOnly">false </item>
         <item name="android:progressDrawable">@drawable/watertracker_cpb</item>
+    </style>
+    <style name="CircularProgressBar_workout">
+        <item name="android:indeterminateOnly">false </item>
+        <item name="android:progressDrawable">@drawable/workout_cpd</item>
+    </style>
+
+
+
+    <style name="workoutBtn.Blue" parent="ThemeOverlay.AppCompat">
+            <item name="colorAccent">@color/workoutFragmentPrimaryColor</item>
+    </style>
+
+
+<!--    add workout activity header-->
+    <style name="Theme.addworkout" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
     </style>
 </resources>
