--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,7 @@
         <item name="android:drawableRight">@drawable/edit_pen</item>
         <item name="android:textColor">#5C5C5C</item>
         <item name="android:textSize">18sp</item>
+    </style>
     <style name="custom_btn">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
