--- a/app/src/main/res/layout/fragment_add_water_pop_up.xml
+++ b/app/src/main/res/layout/fragment_add_water_pop_up.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="200ml"
+        android:text="-"
         android:textColor="@color/waterDarkBlue"
         android:textSize="30sp"
         android:textStyle="bold"
